--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./css/normalize.css" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <title>AutoZ</title>
+    <link rel="stylesheet" href="./css/style.min.css" />
+    <title>AutoZaim</title>
   </head>
 
   <body>
@@ -14,9 +15,7 @@
       <div class="container">
         <div class="header__top-wrap">
           <div class="header__logo">
-            <a href="#"
-              ><img src="./images/logo.png" alt="Лого" class="header__logo-img"
-            /></a>
+            <a href="#"><img src="./images/logo.png" alt="Лого" class="header__logo-img" /></a>
             <div class="header__logo-text">
               <a href="#">
                 Автозайм<br />
@@ -26,9 +25,7 @@
           </div>
           <div class="header__contacts">
             <a href="#" class="header__request">заказать звонок</a>
-            <a href="tel:88432121107" class="header__phone"
-              >8 (843) 212-11-07</a
-            >
+            <a href="tel:88432121107" class="header__phone">8 (843) 212-11-07</a>
           </div>
         </div>
         <div class="header__text">
@@ -52,19 +49,9 @@
             </div>
             <form action="#" class="header__form">
               <label for="login" class="header__form-login"></label>
-              <input
-                id="login"
-                type="text"
-                name="login"
-                placeholder="Имя ..."
-              />
-              <label label="phone" class="header__form-phone"></label>
-              <input
-                id="phone"
-                type="tel"
-                name="phone"
-                placeholder="Телефон ..."
-              />
+              <input id="login" type="text" name="login" placeholder="Имя ..." />
+              <label for="phone" class="header__form-phone"></label>
+              <input id="phone" type="tel" name="phone" placeholder="Телефон ..." />
               <button type="submit" class="header__form-btn">
                 Получить консультацию
               </button>
@@ -76,6 +63,7 @@
     </header>
     <section class="advantages">
       <div class="container">
+        <h2 class="visually-hidden">Преимущества</h2>
         <ul class="advantages__list">
           <li class="advantages__item">
             <div class="advantages__item-bg">
@@ -207,15 +195,10 @@
 
         <div class="footer__form-box">
           <form action="#" class="footer__form">
-            <label for="login" class="footer__form-login"></label>
-            <input id="login" type="text" name="login" placeholder="Имя ..." />
-            <label label="phone" class="footer__form-phone"></label>
-            <input
-              id="phone"
-              type="tel"
-              name="phone"
-              placeholder="Телефон ..."
-            />
+            <label for="footer__login" class="footer__form-login"></label>
+            <input id="footer__login" type="text" name="login" placeholder="Имя ..." />
+            <label for="footer__phone" class="footer__form-phone"></label>
+            <input id="footer__phone" type="tel" name="phone" placeholder="Телефон ..." />
             <button type="submit" class="footer__form-btn">
               Заказать звонок
             </button>
@@ -224,4 +207,5 @@
       </div>
     </footer>
   </body>
+
 </html>
